--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
-            <h1 class="about_taital">About Our cycle Store</h1>
+            <h1 class="about_taital">Tentang MSI</h1>
             <p class="about_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
             </p>
             <div class="about_main">
@@ -222,7 +222,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                <div class="carousel-item active">
                   <div class="container">
                      <div class="client_main">
-                        <h1 class="client_taital">Says Customers</h1>
+                        <h1 class="client_taital">Testimoni Konsumen</h1>
                         <div class="client_section_2">
                            <div class="client_left">
                               <div><img src="images/client-img.png" class="client_img"></div>
@@ -239,7 +239,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                <div class="carousel-item">
                   <div class="container">
                      <div class="client_main">
-                        <h1 class="client_taital">Says Customers</h1>
+                        <h1 class="client_taital">Testimoni Konsumen</h1>
                         <div class="client_section_2">
                            <div class="client_left">
                               <div><img src="images/client-img.png" class="client_img"></div>
@@ -256,7 +256,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                <div class="carousel-item">
                   <div class="container">
                      <div class="client_main">
-                        <h1 class="client_taital">Says Customers</h1>
+                        <h1 class="client_taital">Testimoni Konsumen</h1>
                         <div class="client_section_2">
                            <div class="client_left">
                               <div><img src="images/client-img.png" class="client_img"></div>
