--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                         <h1 class="client_taital">Testimoni Konsumen</h1>
                         <div class="client_section_2">
                            <div class="client_left">
-                              <div><img src="images/client-img.png" class="client_img"></div>
+                              <div><img src="images/testimoni bambo 2.png" class="client_img"></div>
                            </div>
                            <div class="client_right">
                               <div class="quote_icon"><img src="images/quote-icon.png"></div>
