--- a/news.html
+++ b/news.html
@@ -156,7 +156,7 @@
                  <div class="padding_15">
                            <h2 class="speed_text">Diamond Beauty</h2>
                            <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">suka banget sama produk ini. wajah saya jadi lebih cerah, lebih lembut, dan bekas jerawatnya memudar. terimakasi dari produk MSI </p>
+                           <p class="long_text">suka banget sama produk ini. wajah saya jadi lebih cerah, lebih lembut, dan bekas jerawatnya memudar. terimakasi dari produk MSI</p>
                         </div>
                      </div>
                  </div>
@@ -166,7 +166,7 @@
                  <div class="padding_15">
                            <h2 class="speed_text">Skincare MSI</h2>
                            <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">Recommended aku suka pake malam sebelum tidur, paginya muka kayak kenyal gitu dan jerawat kecil yang mau tumbuh itu jadi kering. terimakasih dari produk MSI </p>
+                           <p class="long_text">Recommended aku suka pake malam sebelum tidur, paginya muka kayak kenyal gitu dan jerawat kecil yang mau tumbuh itu jadi kering. terimakasih dari produk MSI</p>
                         </div>
                      </div>
                  </div>
@@ -208,7 +208,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">Copyright 2019 All Right Reserved By.<a href="https://html.design"> Free  html Templates</p>
+            <p class="copyright_text">Copyright 2023 All Right Reserved By.<a href="https://html.design"> Kartika Hijrotul Farhatin</p>
          </div>
       </div>
       <!-- copyright section end -->    
