--- a/index.html
+++ b/index.html
@@ -289,31 +289,31 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                <div class="row">
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/img-6.png"></div>
+                        <div class="zoomout frame"><img src="images/diamond-beauty.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Speed cycle</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+                           <h2 class="speed_text">Diamond Beauty</h2>
+                           <div class="post_text">Post by : Kartika <span style="float: right;">20-12-2019</span></div>
+                           <p class="long_text">MSI DIAMOND BEAUTY SKIN CARE yang sering disebut MSI GOLD BEAUTY SKIN CARE SILVER SERIES Merupakan paket produk perawatan kulit wajah yang diformulasikan dari kandungan bahan-bahan alami </p>
                         </div>
                      </div>
                   </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/img-7.png"></div>
+                        <div class="zoomout frame"><img src="images/Bamboo-Charcoal.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Speed cycle</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+                           <h2 class="speed_text">Bamboo Charcoal</h2>
+                           <div class="post_text">Post by : Kartika <span style="float: right;">20-12-2019</span></div>
+                           <p class="long_text">Formula khusus Bamboo Charcoal membantu mengurangi minyak berlebih pada wajah sehingga membuat wajah terasa lebih lembab dan segar </p>
                         </div>
                      </div>
                   </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/img-8.png"></div>
+                        <div class="zoomout frame"><img src="images/face-mist.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Jaump cycle</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+                           <h2 class="speed_text">Face Mist</h2>
+                           <div class="post_text">Post by : Kartika <span style="float: right;">20-12-2019</span></div>
+                           <p class="long_text">Face mist merupakan penyempurnaan antara produk Biospray dan Silver Ion. Kandungan antioxsidant. astringent, anti bacterial, membantu memberikan efek menenangkan, menyegarkan dan mengencangkan bagi kulit </p>
                         </div>
                      </div>
                   </div>
