--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                <div class="col-lg-8 col-sm-12 padding_0">
                   <div class="map_main">
                      <div class="map-responsive">
-                       <iframe src="https://www.google.com/maps/@-8.1869877,113.631821,94m/data=!3m1!1e3?hl=id" width="600" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                       <iframe src="https://www.google.com/maps/@-8.1866354,113.6329868,17z/data=!3m1!4b1!4m2!7m1!2e1" width="600" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
                      </div>
                   </div>
                </div>
