--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                            <div class="client_right">
                               <div class="quote_icon"><img src="images/quote-icon.png"></div>
                               <p class="client_text">Recommended aku suka pake malam sebelum tidur, paginya muka kayak kenyal gitu dan jerawat kecil yang mau tumbuh itu jadi kering. terimakasih dari produk MSI</p>
-                              <h3 class="client_name">Channery</h3>
+                              <h3 class="client_name">Diamond Beauty</h3>
                            </div>
                         </div>
                      </div>
