--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
       <div class="about_section layout_padding">
          <div class="container">
             <h1 class="about_taital">Tentang MSI</h1>
-            <p class="about_text">PT. Mahkota Sukses Indonesia (MSI) adalah perusahaan yang menjual produk-produk kesehatan dan kecantikan dengan sistem jaringan atau biasa di sebut MLM (Multy Level Marketing) atau pemasaran berjenjang yang berdiri pada Tanggal 4 Juli 2014. PT. Mahkota Sukses Indonesia Awalnya bernama PT. Multy Sukses Internasional, dan berganti nama menjadi PT. Mahakarya Sejahtera Indonesia pada tanggal 07 juli 2017. Dan PT. MSI berganti nama menjadi PT. Mahkota Sukses Indonesia pada tanggal 02 Februari 2019.
-            </p>
+            <p class="about_text">PT. Mahkota Sukses Indonesia (MSI) adalah perusahaan yang menjual produk-produk kesehatan dan kecantikan dengan sistem jaringan atau biasa di sebut MLM (Multy Level Marketing) atau pemasaran berjenjang yang berdiri pada Tanggal 4 Juli 2014. PT. Mahkota Sukses Indonesia Awalnya bernama PT. Multy Sukses Internasional, dan berganti nama menjadi PT. Mahakarya Sejahtera Indonesia pada tanggal 07 juli 2017. Dan PT. MSI berganti nama menjadi PT. Mahkota Sukses Indonesia pada tanggal 02 Februari 2019.</p>
             <div class="about_main">
                <img src="images/pabrik MSI.png" class="image_5">
             </div>
