--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                            <div class="client_right">
                               <div class="quote_icon"><img src="images/quote-icon.png"></div>
                               <p class="client_text">saya mengalami jerawat yang sangat cukup parah, saya sudah mencoba berbagai produk kecantikan yang di recomendasi dari temen-temen tetapi tidak ada perubahan sama sekali, akhirnya saya menemukan Bambo Charcoal yang bisa mengatasi jerawat saya. terimakasi dari produk MSI</p>
-                              <h3 class="client_name">Channery</h3>
+                              <h3 class="client_name">Almira</h3>
                            </div>
                         </div>
                      </div>
@@ -241,12 +241,12 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                         <h1 class="client_taital">Testimoni Konsumen</h1>
                         <div class="client_section_2">
                            <div class="client_left">
-                              <div><img src="images/testimoni bambo.jpeg" class="client_img"></div>
+                              <div><img src="images/silver ion.jpg" class="client_img"></div>
                            </div>
                            <div class="client_right">
                               <div class="quote_icon"><img src="images/quote-icon.png"></div>
                               <p class="client_text">suka banget sama produk ini. wajah saya jadi lebih cerah, lebih lembut, dan bekas jerawatnya memudar. terimakasi dari produk MSI</p>
-                              <h3 class="client_name">Channery</h3>
+                              <h3 class="client_name">Maya</h3>
                            </div>
                         </div>
                      </div>
@@ -263,7 +263,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                            <div class="client_right">
                               <div class="quote_icon"><img src="images/quote-icon.png"></div>
                               <p class="client_text">Recommended aku suka pake malam sebelum tidur, paginya muka kayak kenyal gitu dan jerawat kecil yang mau tumbuh itu jadi kering. terimakasih dari produk MSI</p>
-                              <h3 class="client_name">Diamond Beauty</h3>
+                              <h3 class="client_name">Azizah</h3>
                            </div>
                         </div>
                      </div>
