--- a/index.html
+++ b/index.html
@@ -282,37 +282,37 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
       <!-- news section start -->
       <div class="news_section layout_padding">
          <div class="container">
-            <h1 class="news_taital">News</h1>
-            <p class="news_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+            <h1 class="news_taital">Produk-Produk MSI</h1>
+            <p class="news_text">MSI bukan hanya mengeluarkan produk perawatan wajah, tetapi juga perwatan badan </p>
             <div class="news_section_2 layout_padding">
                <div class="row">
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/diamond-beauty.png"></div>
+                        <div class="zoomout frame"><img src="images/Body Lotion.jpg"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Diamond Beauty</h2>
+                           <h2 class="speed_text">Diamond Beauty Body Lotion</h2>
                            <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
-                           <p class="long_text">MSI DIAMOND BEAUTY SKIN CARE yang sering disebut MSI GOLD BEAUTY SKIN CARE SILVER SERIES Merupakan paket produk perawatan kulit wajah yang diformulasikan dari kandungan bahan-bahan alami </p>
+                           <p class="Body Lotion MSI Beauty Body Lotion Glutathione & Collagen merupakan produk perawatan kecantikan untuk nutrisi kulit tubuh. Memiliki kandungan Gluthatione, Collagen dan diperkaya dengan Vitamin E yang bermanfaat untuk melembabkan, mengencangkan, mencerahkan serta meremajakan kulit tubuh. </p>
                         </div>
                      </div>
                   </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/Bamboo-Charcoal.png"></div>
+                        <div class="zoomout frame"><img src="images/Glucopel.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Bamboo Charcoal</h2>
+                           <h2 class="speed_text">Collagen Glucopel</h2>
                            <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
-                           <p class="long_text">Formula khusus Bamboo Charcoal membantu mengurangi minyak berlebih pada wajah sehingga membuat wajah terasa lebih lembab dan segar </p>
+                           <p class="long_text">Manfaat Glucopel (untuk kesehatan dan kecantikan) 1. Meningkatkan Imunitas tubuh. 2. Sebagai antioksidan bagi tubuh dalam menangkal berbagai radikal bebas. 3.Kandungan Vit C dan Vit E nya dapat membantu tubuh dalam memproduksi Protein Collagen yang sangat bermanfaat bagi kulit. </p>
                         </div>
                      </div>
                   </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/face-mist.png"></div>
+                        <div class="zoomout frame"><img src="images/sabun kolagen.jpg"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Face Mist</h2>
+                           <h2 class="speed_text">Sabun Susu Collagen</h2>
                            <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
-                           <p class="long_text">Face mist merupakan penyempurnaan antara produk Biospray dan Silver Ion. Kandungan antioxsidant. astringent, anti bacterial, membantu memberikan efek menenangkan, menyegarkan dan mengencangkan bagi kulit </p>
+                           <p class="long_text">sabun kolagen yang bermanfaat untuk menghilangkan jerawat, meremajakan kulit, memutihkan kulit, menghaluskan kulit, mengurangi iritasi, dan cocok digunakan ke seluruh bagian kulit termasuk wajah dan badan </p>
                         </div>
                      </div>
                   </div>
