--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                   </div>
                   <div class="col-md-6">
                      <h1 class="cycles_text">MSI DIAMOND BEAUTY</h1>
-                     <p class="lorem_text">Manfaat Diamond BEAUTY yaitu regenerasi sel kulit melawan kerutan, penuaan, flek serta menghilangkan atau menyamarkan bekas luka parut pada kulit wajah, menghambat dan memudarkan kerutan pada kulit, mencerahkan kulit tubuh secara alami, melembutkan tekstur kulit, melindungi serat kolagen dari kerusakan radikal bebas untuk menjaga elastisitas kulit, mengurangi produksi melanin dengan menekan aktivitas tirosinase dan beralih sintesis eumelanin untuk sintesis pheomelanin  .</p>
+                     <p class="lorem_text">Manfaat Diamond BEAUTY yaitu regenerasi sel kulit melawan kerutan, penuaan, flek serta menghilangkan atau menyamarkan bekas luka parut pada kulit wajah, menghambat dan memudarkan kerutan pada kulit, mencerahkan kulit tubuh secara alami, melembutkan tekstur kulit, melindungi serat kolagen dari kerusakan radikal bebas untuk menjaga elastisitas kulit, mengurangi produksi melanin dengan menekan aktivitas tirosinase dan beralih sintesis eumelanin untuk sintesis pheomelanin.
+                     </p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Beli Sekarng</a></div>
                         <h4 class="price_text">Harga <span style=" color: #f7c17b">Rp</span> <span style=" color: #325662">550.000</span></h4>
