--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                   </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                        <div class="zoomout frame"><img src="images/sabun kolagen.jpg"></div>
+                        <div class="zoomout frame"><img src="images/sabun kolagen.png"></div>
                         <div class="padding_15">
                            <h2 class="speed_text">Sabun Susu Collagen</h2>
                            <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
