--- a/index.html
+++ b/index.html
@@ -283,37 +283,37 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
       <!-- news section start -->
       <div class="news_section layout_padding">
          <div class="container">
-            <h1 class="news_taital">Testimoni Costumer</h1>
-            <p class="news_text">ini adalah testimoni costumer dengan produk yg di pakai </p>
+            <h1 class="news_taital">Produk-Produk MSI</h1>
+            <p class="news_text">MSI bukan hanya mengeluarkan produk kecantikan wajah , tetapi juga produk perawatan wajah </p>
             <div class="news_section_2 layout_padding">
                <div class="row">
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                       <div class="zoomout frame"><img src="images/testimoni bambo 2.png"></div>
+                       <div class="zoomout frame"><img src="images/Body Lotion.jpg"></div>
                      <div class="padding_15">
-                           <h2 class="speed_text">Bambo Charcoal</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">saya mengalami jerawat yang sangat cukup parah, saya sudah mencoba berbagai produk kecantikan yang di recomendasi dari temen-temen tetapi tidak ada perubahan sama sekali, akhirnya saya menemukan Bambo Charcoal yang bisa mengatasi jerawat saya. terimakasi dari produk MSI </p>
+                           <h2 class="speed_text">Diamond Beauty Body Lotion</h2>
+                           <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
+                           <p class="long_text">Body Lotion MSI Beauty Body Lotion Glutathione & Collagen merupakan produk perawatan kecantikan untuk nutrisi kulit tubuh. Memiliki kandungan Gluthatione, Collagen dan diperkaya dengan Vitamin E yang bermanfaat untuk melembabkan, mengencangkan, mencerahkan serta meremajakan kulit tubuh. </p>
                         </div>
                      </div>
                  </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                       <div class="zoomout frame"><img src="images/testimoni bambo.jpeg"></div>
+                       <div class="zoomout frame"><img src="images/Glucopel.png></div>
                  <div class="padding_15">
-                           <h2 class="speed_text">Diamond Beauty</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">suka banget sama produk ini. wajah saya jadi lebih cerah, lebih lembut, dan bekas jerawatnya memudar. terimakasi dari produk MSI</p>
+                           <h2 class="speed_text">Glucopel</h2>
+                           <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
+                           <p class="long_text">Manfaat Glucopel (untuk kesehatan dan kecantikan) 1. Meningkatkan Imunitas tubuh. 2. Sebagai antioksidan bagi tubuh dalam menangkal berbagai radikal bebas. 3.Kandungan Vit C dan Vit E nya dapat membantu tubuh dalam memproduksi Protein Collagen yang sangat bermanfaat bagi kulit.</p>
                         </div>
                      </div>
                  </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                       <div class="zoomout frame"><img src="images/testi 1.jpg"></div>
+                       <div class="zoomout frame"><img src="images/sabun kolagen.png"></div>
                  <div class="padding_15">
-                           <h2 class="speed_text">Skincare MSI</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-04-2023</span></div>
-                           <p class="long_text">Recommended aku suka pake malam sebelum tidur, paginya muka kayak kenyal gitu dan jerawat kecil yang mau tumbuh itu jadi kering. terimakasih dari produk MSI</p>
+                           <h2 class="speed_text">Sabun Susu Collagen</h2>
+                           <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
+                           <p class="long_text">sabun kolagen yang bermanfaat untuk menghilangkan jerawat, meremajakan kulit, memutihkan kulit, menghaluskan kulit, mengurangi iritasi, dan cocok digunakan ke seluruh bagian kulit termasuk wajah dan badan.</p>
                         </div>
                      </div>
                  </div>
