--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum 
                  </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                       <div class="zoomout frame"><img src="images/Glucopel.png></div>
+                       <div class="zoomout frame"><img src="images/Glucopel.png"></div>
                  <div class="padding_15">
                            <h2 class="speed_text">Glucopel</h2>
                            <div class="post_text">Post by : Kartika <span style="float: right;">20-04-2023</span></div>
