--- a/news.html
+++ b/news.html
@@ -152,9 +152,9 @@
                  </div>
                   <div class="col-sm-4">
                      <div class="box_main_1">
-                       <div class="zoomout frame"><img src="images/testimoni bambo.jpeg"></div>
+                       <div class="zoomout frame"><img src="images/silver ion.jpg"></div>
                  <div class="padding_15">
-                           <h2 class="speed_text">Diamond Beauty</h2>
+                           <h2 class="speed_text">Silver Ion</h2>
                            <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
                            <p class="long_text">suka banget sama produk ini. wajah saya jadi lebih cerah, lebih lembut, dan bekas jerawatnya memudar. terimakasi dari produk MSI</p>
                         </div>
