--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
                   </div>
                </div>
                <div class="col-lg-4 col-sm-12">
-                  <div class="call_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_0">Page when looking at its layout</span></a></div>
+                  <div class="call_text"><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.1543468646923!2d113.62895851071451!3d-8.18720239181027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd691355ab59611%3A0x73cacac635069867!2sRIFA%20MSI!5e0!3m2!1sid!2sid!4v1691295606392!5m2!1sid!2sid"><img src="images/map-icon.png"><span class="padding_left_0">Page when looking at its layout</span></a></div>
                   <div class="call_text"><a href="https://wa.me/6281330591499?text=contoh%20isi%20pesan%20dikirim%20via%20whatsapp"><img src="images/call-icon.png"><span class="padding_left_0">Call Now +6281330591499</span></a></div>
                   <div class="call_text"><a href="#"><img src="images/mail-icon.png"><span class="padding_left_0">rifamarketmsi@gmail.com</span></a></div>
                   <div class="social_icon">
