--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                      <p class="lorem_text">Manfaat Diamond BEAUTY yaitu regenerasi sel kulit melawan kerutan, penuaan, flek serta menghilangkan atau menyamarkan bekas luka parut pada kulit wajah, menghambat dan memudarkan kerutan pada kulit, mencerahkan kulit tubuh secara alami, melembutkan tekstur kulit, melindungi serat kolagen dari kerusakan radikal bebas untuk menjaga elastisitas kulit, mengurangi produksi melanin dengan menekan aktivitas tirosinase dan beralih sintesis eumelanin untuk sintesis pheomelanin.
                      </p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="#">Beli Sekarng</a></div>
+                        <div class="buy_bt"><a href="https://vt.tiktok.com/ZSLXb4R9k/">Beli Sekarng</a></div>
                         <h4 class="price_text">Harga <span style=" color: #f7c17b">Rp</span> <span style=" color: #325662">550.000</span></h4>
                      </div>
                   </div>
@@ -166,7 +166,7 @@ Basahi wajah dengan air lalu gunakan sabun merata pada wajah sambil dipijat-pija
 Lalu basuh dengan air hingga bersih.
 Gunakan Sabun Bamboo Charcoal MSI secara rutin setiap hari di pagi, sore dan malam sebelum tidur.</p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="#">Beli Sekarng</a></div>
+                        <div class="buy_bt"><a href="https://vt.tiktok.com/ZSLXbV9VX/">Beli Sekarng</a></div>
                         <h4 class="price_text">Harga <span style=" color: #f7c17b">Rp</span> <span style=" color: #325662">550.000</span></h4>
                      </div>
                   </div>
@@ -191,7 +191,7 @@ Gunakan Sabun Bamboo Charcoal MSI secara rutin setiap hari di pagi, sore dan mal
                      <p class="lorem_text">Cara pemakaiannya sangat mudah:
 Semprotkan Ion Silver di sekitar wajah dan leher secara merata, gunakan sebelum beraktivitas pagi, siang atau sore hari.</p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="#">Beli Sekarang</a></div>
+                        <div class="buy_bt"><a href="https://vt.tiktok.com/ZSLXbHdYK/">Beli Sekarang</a></div>
                         <h4 class="price_text">Harga <span style=" color: #f7c17b">Rp</span> <span style=" color: #325662">550.000</span></h4>
                      </div>
                   </div>
