--- a/product.html
+++ b/product.html
@@ -86,7 +86,7 @@
                            <div class="col-md-5">
                               <h1 class="banner_taital">Diamond Beauty</h1>
                               <p class="banner_text">MSI DIAMOND BEAUTY SKIN CARE yang sering disebut MSI GOLD BEAUTY SKIN CARE SILVER SERIES Merupakan paket produk perawatan kulit wajah yang diformulasikan dari kandungan bahan-bahan alami. </p>
-                              <div class="contact_bt"><a href="contact.html">Read More</a></div>
+                              <div class="contact_bt"><a href="https://vt.tiktok.com/ZSLXb4R9k/">Read More</a></div>
                            </div>
                         </div>
                      </div>
@@ -101,7 +101,7 @@
                            <div class="col-md-5">
                               <h1 class="banner_taital">Bamboo Charcoal</h1>
                               <p class="banner_text">Formula khusus Bamboo Charcoal membantu mengurangi minyak berlebih pada wajah sehingga membuat wajah terasa lebih lembab dan segar </p>
-                              <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
+                              <div class="contact_bt"><a href="https://vt.tiktok.com/ZSLXbV9VX/">Shop Now</a></div>
                            </div>
                         </div>
                      </div>
@@ -116,7 +116,7 @@
                            <div class="col-md-5">
                               <h1 class="banner_taital">Face Mist</h1>
                               <p class="banner_text">Face mist merupakan penyempurnaan antara produk Biospray dan Silver Ion. Kandungan antioxsidant. astringent, anti bacterial, membantu memberikan efek menenangkan, menyegarkan dan mengencangkan bagi kulit </p>
-                              <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
+                              <div class="contact_bt"><a href="https://vt.tiktok.com/ZSLXbHdYK/">Shop Now</a></div>
                            </div>
                         </div>
                      </div>
